wip: fix slider items collapsing on home page, firefox

--- a/components/HomePageComponents/HomePageSlider/HomePageSlider.css
+++ b/components/HomePageComponents/HomePageSlider/HomePageSlider.css
@@ -83,9 +83,8 @@
 }
 
 .item {
-  display: flex;
+  display: block;
   position: relative;
-  flex-direction: column;
   padding-right: .5rem;
 
   &:last-child {
